# sir-model

./: LICENSE  README.md  app.py  config.py  config.yml  pyproject.toml  requirements.txt
assets/: styles.css
callbacks/: callbacks.py
components/: AppLayout.py  CentralBar.py  ControlPanel.py  DonationModal.py  EvolutionPanel.py  GraphCard.py  LeftSidebar.py  MainGraph.py  NavBar.py  __init__.py  control_panel.py  evolution_panel.py  layout.py  main_graph.py  navbar.py
lib/: disease.py  model.py  population.py  scenario.py
tests/: test_disease.py  test_model.py  test_population.py  test_scenario.py
tests/lib/: test_disease.py  test_model.py  test_population.py  test_scenario.py
