[tool.poetry]
name = "sir-model"
version = "0.1.0"
description = ""
authors = ["Alessandro <alex.rubin@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
parameterized = "^0.9.0"
pydantic = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
